rbc event background color change it to our app primary color and mark i

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,7 +204,7 @@
   justify-content: center;
   flex-wrap: nowrap !important;
   color: #515151;
-  background-color: transparent;
+  background-color: hsl(var(--primary)) !important;
   border: none !important;
 }
 
