--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -260,4 +260,9 @@
   border-bottom: 1px solid hsl(var(--border));
 }
 
+@media (min-width: 1024px) {
+  .rbc-time-slot {
+    padding: 11px 0px;
+  }
+}
     
